--- a/examples/testing.html
+++ b/examples/testing.html
@@ -406,7 +406,7 @@
                         nSQL("users")
                             .query("select")
                             .where([
-                                ["search(title, name)", "=", "fact"]
+                                ["search(title, name)", ">0", "orem fct"]
                             ])
                             // .trieSearch("name", "je")
                             // .where(["age", "=", "NULL"])
