--- a/examples/react.html
+++ b/examples/react.html
@@ -2,8 +2,6 @@
 
 <head>
     <script src="nano-sql.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/umd/react.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.production.min.js"></script>
 </head>
 
 <body>
@@ -12,62 +10,85 @@
 
 <footer>
     <script>
-class App extends React.Component {
+        nSQL("personnelLocation")
+            .model([{
+                    "key": "id",
+                    "type": "uuid",
+                    "props": [
+                        "pk"
+                    ]
+                },
+                {
+                    "key": "client_id",
+                    "type": "uuid",
+                    "props": [
+                        "idx"
+                    ]
+                },
+                {
+                    "key": "client_location_id",
+                    "type": "uuid",
+                    "props": [
+                        "idx"
+                    ]
+                },
+                {
+                    "key": "personnel_id",
+                    "type": "string",
+                    "props": [
+                        "idx"
+                    ]
+                },
+                {
+                    "key": "created_date",
+                    "type": "string",
+                    "props": []
+                },
+                {
+                    "key": "modified_date",
+                    "type": "string",
+                    "props": []
+                }
+            ])
+            .config({
+                id: 'test-cache',
+                // mode: "IDB"
+            }).connect().then(() => {
 
-    constructor() {
-        super();
-        this.state = {
-            message: "Loading"
-        };
-        this.updateMessage = this.updateMessage.bind(this);
-    }
+                const data = [{
+                        'id': '1',
+                        'personnel_id': '2596'
+                    },
+                    {
+                        'id': '2',
+                        'personnel_id': '2596'
+                    },
+                    {
+                        'id': '3',
+                        'personnel_id': '2596'
+                    },
+                    {
+                        'id': '4',
+                        'personnel_id': '2596'
+                    }
+                ];
 
-    componentWillMount() {
-        nSQL("message").on("change", this.updateMessage);
-    }
+                const promises = [];
 
-    componentWillUnmount() {
-        nSQL("message").off("change", this.updateMessage);
-    }
+                data.forEach(row => {
+                    promises.push(nSQL("personnelLocation").query("upsert", row).exec());
+                });
 
-    updateMessage() {
-        nSQL("message").query("select").exec().then((rows) => {
-            if (!rows.length) return;
-            this.setState({
-                message: rows[0].message
-            });
-        });
-    }
+                return Promise.all(promises);
 
-    shouldComponentUpdate(nextProps, nextState) {
-        return this.state.message !== nextState.message;
-    }
-
-
-    render() {
-        return React.createElement("div", null, " Random String: ", this.state.message);
-    }
-}
-
-const randomString = () => {
-    return Math.round(Math.random() * 10000).toString(16);
-}
-
-nSQL("message")
-.model([
-    {key: "id",type: "int",props: ["pk", "ai"]},
-    {key: "message",type: "string"}
-])
-.connect().then(() => {
-    ReactDOM.render(React.createElement(App, null), document.body);
-    setInterval(() => {
-        // Because we're using nanoSQL's event system we don't have to worry about updating these changes to the UI!
-        nSQL("message").query("upsert", {
-            id: 1,
-            message: randomString()
-        }).exec();
-    }, 500);
-});
+            }).then(() => {
+                // performing select on a secondary index uses that secondary index for the query...
+                return nSQL("personnelLocation").query("select").where(["personnel_id", "=", "2596"]).exec();
+            }).then((rows) => {
+                const pre = document.createElement("pre");
+                document.body.appendChild(pre);
+                pre.innerHTML = JSON.stringify(rows, null, 4);
+            })
     </script>
 </footer>
 
