--- a/examples/index.html
+++ b/examples/index.html
@@ -9,13 +9,37 @@
     <script src="nano-sql.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.13/vue.min.js"></script>
     <script>
+        nSQL([{
+                name: "bill",
+                age: 20
+            },
+            {
+                name: "bob",
+                age: 25
+            },
+            {
+                name: "jeb",
+                age: 27
+            }
+        ]).query("select", ["name", "MAX(age) AS age"]).exec().then((rows) => {
+            console.log(rows); // <= [{name: "jeb", age: 27}]
+        })
 
         nSQL("message")
-            .model([
-                { key: "id", type: "string", props: ["pk", "ai"] },
-                { key: "message", type: "string" }
+            .model([{
+                    key: "id",
+                    type: "string",
+                    props: ["pk", "ai"]
+                },
+                {
+                    key: "message",
+                    type: "string"
+                }
             ]).connect().then(() => {
-                return nSQL("message").query("upsert", {id: "", message: ""}).exec();
+                return nSQL("message").query("upsert", {
+                    id: "",
+                    message: ""
+                }).exec();
             }).then(() => {
                 console.log("HEY");
             }).catch((err) => {
